# AI-QA-Automation

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI-QA-Automation.sln  Dockerfile  Dockerfile.backend  README.md  alembic.ini  check_connection.py  config.example.yaml  docker-compose-server.yml.example  docker-compose.yml  h2_proxy.py  help.txt  project-context.md  pyproject.toml  requirements.txt
TestApiDotNet/: Program.cs
_bmad-output/: innovation-strategy-2026-03-19.md
_bmad-output/implementation-artifacts/: 1-1-project-restructure-to-src-layout.md  1-2-configuration-system-with-pydantic-settings.md  1-3-custom-exception-hierarchy.md  1-4-shared-pydantic-models-stageresult-agentmessage.md  1-5-dev-tooling-setup-ruff-mypy-pytest-pre-commit.md  10-1-project-artifact-storage-foundation.md  10-2-artifact-list-and-empty-folder-browsing.md  10-3-artifact-read-and-preview-access.md  10-4-artifact-edit-delete-and-version-metadata.md  10-5-agent-artifact-service-integration.md  10-6-project-scoped-artifact-change-events.md  10-7-realtime-artifact-refresh-ux.md  10-8-open-artifact-update-delete-notice.md  11-1-azure-entra-sso-authentication-foundation.md  11-1-mcp-client-foundation-for-confluence-and-jira.md  11-2-bob-confluence-url-intake-and-pipeline-trigger.md  11-3-confluence-content-retrieval-and-parsing.md  11-4-jira-requirements-retrieval.md  11-5-input-quality-detection-before-generation.md  11-6-bob-reviewable-extraction-output.md  11-7-requirements-artifact-save.md  11-8-technical-debt-sweep-and-hardening.md  12-1-postgresql-persistence-foundation-with-sqlalchemy-and-alembic.md  12-1-test-case-generation-input-selection.md  12-10-user-project-selection-in-alice-configuration-flow.md  12-11-fix-api-tests-broken-by-db-migration.md  12-12-fix-frontend-401-unauthorized-api-calls.md  12-13-fix-mcp-extraction-failure-and-implement-proactive-session-cleanup.md  12-2-browser-automation-oriented-test-case-generation.md  12-2-local-authentication-and-admin-bootstrap.md  12-3-confidence-scoring-for-generated-test-cases.md  12-3-role-based-access-control-for-admin-and-standard-users.md  12-4-mary-review-workflow.md  12-4-project-and-membership-management-api.md  12-5-project-scoped-artifact-service.md  12-5-test-case-artifact-save.md  12-6-frontend-login-project-selection-and-api-client-foundation.md  12-7-refactor-existing-pipeline-from-workspace-paths-to-project-context.md  12-8-bugfix-admin-routing-and-dashboard.md  12-9-admin-dashboard-refinement.md  (+223 more)
_bmad-output/planning-artifacts/: .decision-log.md  architecture.md  design-browseruse-driven-script-generation-2026-06-18.md  design-projectadmin-rbac-redesign-2026-06-21.md  design-security-compliant-target-app-auth-2026-06-25.md  design-sso-first-auth-spike-2026-06-25.md  design-test-login-credentials-and-sessions-2026-06-20.md  epics.md  implementation-readiness-report-2026-04-07.md  prd.md  product-brief-AI  product-brief-AI QA Automation-2026-03-13.md  product-brief-browser-use-custom-distillate.md  product-brief-browser-use-custom.md  sprint-change-proposal-2026-05-14.md  sprint-change-proposal-2026-05-26.md  sprint-change-proposal-2026-05-29.md  sprint-change-proposal-2026-05-30.md  sprint-change-proposal-2026-06-03.md  sprint-change-proposal-2026-06-08.md  sprint-change-proposal-2026-06-08b.md  sprint-change-proposal-2026-06-17.md  sprint-change-proposal-2026-06-19-mary.md  sprint-change-proposal-2026-06-19.md  sprint-change-proposal-2026-06-20-mary.md  sprint-change-proposal-2026-06-20.md  sprint-change-proposal-2026-06-21.md  sprint-change-proposal-2026-06-23-epic24-dom-cache.md  sprint-change-proposal-2026-06-25-no-session-capture.md  sprint-change-proposal-2026-06-27-test-credentials.md  sprint-change-proposal-2026-06-29.md  sprint-change-proposal-2026-06-30.md  sprint-change-proposal-2026-07-01.md  sprint-change-proposal-20260630.md  ux-design-directions.html  ux-design-specification.md
_bmad-output/test-artifacts/: automation-summary.md  e2e-regroup-plan.md  e2e-trace-summary.json  framework-setup-progress.md  framework-validation-report-final.md  framework-validation-report.md  gate-decision.json  results.xml  tea-automate-api-tests.json  tea-automate-backend-tests.json  tea-automate-e2e-tests.json  tea-trace-coverage-matrix-2026-06-07T15-30-00.json  test-review.md  traceability-matrix.md
ai_connection/: __init__.py  client.py  config.py  exceptions.py
alembic/: env.py  script.py.mako
alembic/versions/: 02eee99fe6ae_add_confluence_base_url_to_project.py  (+51 more)
frontend/: .dockerignore  Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scratch/: code-review-11-7-focused.diff  code-review-11-8-packet.md  replace.py  update_dashboard.py  update_tests.py
scripts/: build-docker-images.ps1
src/ai_qa/: config.py  (+5 more)
tests/: README.md  conftest.py  test_admin_rbac_api.py  test_api.py  test_artifact_api.py  test_artifact_service.py  test_auth_api.py  test_auth_password.py  test_auth_service.py  test_config.py  test_exceptions.py  test_model_transfer.py  test_models.py  test_pipeline_artifact_adapter.py  test_pipeline_project_context.py  test_pipeline_websocket_project_context.py  test_project_api.py  test_project_scoped_agents.py  test_websocket.py
(+421 files in other folders)
