[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-qa-automation"
version = "0.1.0"
description = "AI QA Automation Framework"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "browser-use>=0.12.5",
    "fastapi>=0.138.1",
    "langchain-anthropic>=1.3.1",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0",
    "tenacity>=8.0.0",
    "uvicorn[standard]>=0.49.0",
    "websockets>=13.0",
    "langchain-openai>=1.1.9",
    "msal>=1.28",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "email-validator>=2.3.0",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.5",
    "psycopg[binary]>=3.1",
    "boto3>=1.43.12",
    "playwright>=1.60.0",
    "pytest-playwright>=0.8.0",
    "pytest-timeout>=2.4.0",
    "tzdata>=2026.2",
    "pyotp>=2.9.0",
]

[project.scripts]
ai-qa = "ai_qa.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_qa"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true  # third-party libs (browser-use) lack stubs

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-length enforced by formatter not lint
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# -p no:base_url disables the pytest-base-url plugin (pulled in transitively by
# pytest-playwright, Story 14.2). The suite uses `base_url` as a plain test parameter
# in many places; the plugin's session-scoped `base_url` fixture/_verify_url collides
# with those (ScopeMismatch). We never use the plugin in-process — Jack's execution
# subprocess sets APP_BASE_URL via env and runs with a fresh rootdir/addopts, so it
# still loads pytest-playwright + base-url there.
addopts = "--cov=src/ai_qa --cov-report=term-missing --cov-fail-under=80 -p no:base_url"
markers = [
    "integration: mark a test as an integration test",
    "live_provider: real provider model-discovery test; skipped unless TEST_*_KEY is set",
]
filterwarnings = [
    # browser_use uses asyncio.iscoroutinefunction which is deprecated in Python 3.14+
    # This is a third-party library issue — we cannot fix it upstream
    "ignore::DeprecationWarning:browser_use",
    "ignore::DeprecationWarning:observability",
    # google-genai (pulled in by browser_use's ChatGoogle) uses a typing construct
    # deprecated in Python 3.17 — third-party, cannot fix upstream.
    "ignore::DeprecationWarning:google.genai.types",
    # SQLite ResourceWarning: SQLAlchemy connection pool cleanup happens in GC timing
    # that is outside our control (triggered in third-party unittest.mock or pydantic code)
    "ignore::ResourceWarning:sqlalchemy",
    "ignore::ResourceWarning:unittest",
]

[tool.coverage.run]
omit = [
    "src/ai_qa/__main__.py",  # starts uvicorn server — integration tested separately
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.16",
]
